# sfml-megaman

./: .gitignore  CMakeLists.txt  README.md
assets/: enemy_1.xcf  megaman.xcf  projectiles.xcf  snakeman_stage.xcf  spritesheet_megaman.xcf
assets/animations/: walk.xcf  walk_shot.xcf
include/: Animation.hpp  BasicShot.hpp  Box.hpp  Camera.hpp  ContactsHandler.hpp  EnemiesAnimations.hpp  Enemy1.hpp  Game.hpp  GameObject.hpp  Met.hpp  Player.hpp  PlayerAnimation.hpp  Scenario1.hpp  ShotAnimations.hpp  SpriteDef.hpp
include/enemies/: Enemy.hpp
src/: Animation.cpp  BasicShot.cpp  Box.cpp  Camera.cpp  ContactsHandler.cpp  Enemy1.cpp  Game.cpp  GameObject.cpp  Met.cpp  Player.cpp  Scenario1.cpp  SpriteDef.cpp  main.cpp
src/enemies/: Enemy.cpp
